--- a/Pipelines/XNAT__App.html
+++ b/Pipelines/XNAT__App.html
@@ -106,9 +106,9 @@ def download(weasel):
                                         weasel.information(&#34;The selected images will be downloaded to the root folder of the TreeView. The download progress can be checked in the terminal and you may continue using Weasel.&#34;, &#34;XNAT Download&#34;) 
                                         dataset.download_dir(downloadFolder)
                                         weasel.information(&#34;Download completed!&#34;, &#34;XNAT Download&#34;)
-            # Load the directory again
-            # This loads the whole directory again, so it might take some time. It would be quicker if there was an incremental approach to the TreeView (.xml or .csv).
-            weasel.read_dicom_folder()
+        # Load the directory again
+        # This loads the whole directory again, so it might take some time. It would be quicker if there was an incremental approach to the TreeView (.xml or .csv).
+        weasel.read_dicom_folder()
         # Delete Login Details
         del loginDetails, url, username, password
         session.disconnect()
@@ -204,27 +204,35 @@ def upload(weasel):
 
     
 def selectXNATPathDownload(weasel, tree_view_dir=True):
-    if tree_view_dir == False:
-        directory = weasel.selectFolder(title=&#34;Select the directory where you wish to download&#34;)
-    else:
-        directory = os.path.dirname(weasel.objXMLReader.file)
-    return directory
+    try:
+        if tree_view_dir == False:
+            directory = weasel.selectFolder(title=&#34;Select the directory where you wish to download&#34;)
+        else:
+            if weasel.objXMLReader is not None:
+                directory = os.path.dirname(weasel.objXMLReader.file)
+            else:
+                directory = weasel.weaselDataFolder
+        return directory
+    except Exception as e:
+        weasel.log_error(&#39;Error in function XNATapp.selectXNATPathDownload: &#39; + str(e))
 
 
 def selectXNATPathUpload(weasel, tree_view=True):
-    listPaths = []
-    if tree_view == True:
-        images = weasel.images()
-        for image in images:
-            listPaths.append(image.path)
-    else:
-        directory = weasel.selectFolder(title=&#34;Select the directory with the files you wish to upload&#34;)
-        for root, _, files in os.walk(directory):
-            for filename in files:
-                filepath = os.path.join(root, filename)
-                listPaths.append(filepath)
-    return listPaths
-
+    try:
+        listPaths = []
+        if tree_view == True:
+            images = weasel.images()
+            for image in images:
+                listPaths.append(image.path)
+        else:
+            directory = weasel.selectFolder(title=&#34;Select the directory with the files you wish to upload&#34;)
+            for root, _, files in os.walk(directory):
+                for filename in files:
+                    filepath = os.path.join(root, filename)
+                    listPaths.append(filepath)
+        return listPaths
+    except Exception as e:
+        weasel.log_error(&#39;Error in function XNATapp.selectXNATPathUpload: &#39; + str(e))
 
 def zipFiles(listPaths):
     dt = datetime.datetime.now()
@@ -317,9 +325,9 @@ def zipFiles(listPaths):
                                         weasel.information(&#34;The selected images will be downloaded to the root folder of the TreeView. The download progress can be checked in the terminal and you may continue using Weasel.&#34;, &#34;XNAT Download&#34;) 
                                         dataset.download_dir(downloadFolder)
                                         weasel.information(&#34;Download completed!&#34;, &#34;XNAT Download&#34;)
-            # Load the directory again
-            # This loads the whole directory again, so it might take some time. It would be quicker if there was an incremental approach to the TreeView (.xml or .csv).
-            weasel.read_dicom_folder()
+        # Load the directory again
+        # This loads the whole directory again, so it might take some time. It would be quicker if there was an incremental approach to the TreeView (.xml or .csv).
+        weasel.read_dicom_folder()
         # Delete Login Details
         del loginDetails, url, username, password
         session.disconnect()
@@ -354,11 +362,17 @@ def zipFiles(listPaths):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def selectXNATPathDownload(weasel, tree_view_dir=True):
-    if tree_view_dir == False:
-        directory = weasel.selectFolder(title=&#34;Select the directory where you wish to download&#34;)
-    else:
-        directory = os.path.dirname(weasel.objXMLReader.file)
-    return directory</code></pre>
+    try:
+        if tree_view_dir == False:
+            directory = weasel.selectFolder(title=&#34;Select the directory where you wish to download&#34;)
+        else:
+            if weasel.objXMLReader is not None:
+                directory = os.path.dirname(weasel.objXMLReader.file)
+            else:
+                directory = weasel.weaselDataFolder
+        return directory
+    except Exception as e:
+        weasel.log_error(&#39;Error in function XNATapp.selectXNATPathDownload: &#39; + str(e))</code></pre>
 </details>
 </dd>
 <dt id="Weasel.Pipelines.XNAT__App.selectXNATPathUpload"><code class="name flex">
@@ -371,18 +385,21 @@ def zipFiles(listPaths):
 <span>Expand source code</span>
 </summary>
 <pre><code class="python">def selectXNATPathUpload(weasel, tree_view=True):
-    listPaths = []
-    if tree_view == True:
-        images = weasel.images()
-        for image in images:
-            listPaths.append(image.path)
-    else:
-        directory = weasel.selectFolder(title=&#34;Select the directory with the files you wish to upload&#34;)
-        for root, _, files in os.walk(directory):
-            for filename in files:
-                filepath = os.path.join(root, filename)
-                listPaths.append(filepath)
-    return listPaths</code></pre>
+    try:
+        listPaths = []
+        if tree_view == True:
+            images = weasel.images()
+            for image in images:
+                listPaths.append(image.path)
+        else:
+            directory = weasel.selectFolder(title=&#34;Select the directory with the files you wish to upload&#34;)
+            for root, _, files in os.walk(directory):
+                for filename in files:
+                    filepath = os.path.join(root, filename)
+                    listPaths.append(filepath)
+        return listPaths
+    except Exception as e:
+        weasel.log_error(&#39;Error in function XNATapp.selectXNATPathUpload: &#39; + str(e))</code></pre>
 </details>
 </dd>
 <dt id="Weasel.Pipelines.XNAT__App.upload"><code class="name flex">
