--- a/Displays/ImageViewers/ComponentsUI/PixelValueLabel.html
+++ b/Displays/ImageViewers/ComponentsUI/PixelValueLabel.html
@@ -40,6 +40,7 @@ class PixelValueComponent:
         self.pixelValueLayout.setSpacing(0)
         self.labelWidth = 0
         self.lblPixelValue = QLabel()
+        self.lblPixelValue.setAlignment(Qt.AlignCenter)
         self.lblPixelValue.setWordWrap(True)
         self.lblPixelValue.setMargin(0)
         self.lblPixelValue.setStyleSheet(
@@ -107,6 +108,7 @@ of the value of the pixel under the mouse pointer.</p></div>
         self.pixelValueLayout.setSpacing(0)
         self.labelWidth = 0
         self.lblPixelValue = QLabel()
+        self.lblPixelValue.setAlignment(Qt.AlignCenter)
         self.lblPixelValue.setWordWrap(True)
         self.lblPixelValue.setMargin(0)
         self.lblPixelValue.setStyleSheet(
